# card-maker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  example.env  nginx.conf  package-lock.json  package.json  pyproject.toml
api/: .flake8  Dockerfile  create_db.py  initial_data.json  main.py  requirements.txt  start-api.sh  wait-for-it.sh
api/cardmaker/: auth.py  database.py  endpoints.py  logger.py  models.py  security.py  statements.py  utils.py
card-maker-api/: __main__.py  api.py
cardMakerFE/: Dockerfile  example.env  nginx.conf  package-lock.json  package.json  svelte.config.js  vite.config.ts
cardMakerFE/src/: app.html
cardMakerFE/src/lib/: Card.svelte  CardForm.svelte  CardTable.svelte  FilterCheckbox.svelte  FilterDropdown.svelte  TableRow.svelte  api.ts  errors.ts  fetchResource.ts  interfaces.ts  slugify.ts  types.ts
cardMakerFE/src/lib/components/: Card.svelte  CardDeleteModal.svelte  CardForm.svelte  ChangeTagDropdown.svelte  Checkbox.svelte  DropdownButton.svelte  ErrorMessage.svelte  FilterCheckbox.svelte  FilterDropdown.svelte  (+9 more)
cardMakerFE/src/routes/: +layout.js  +layout.svelte  +page.server.js  +page.svelte  Card.svelte  styles.css
card_maker/app/: card_maker.py
card_maker/app/data/: artefakty.csv  labyrint.csv
card_maker/web/: __main__.py  forms.py  routes.py
card_maker/web/static/: main.css
card_maker/web/templates/: aspekt.html  base.html  preview.html
card_maker_api/: api.py
card_maker_app/card_maker_api/: __main__.py
test/: sql_injection_test.py  xss_detection_test.py
(+14 files in other folders)
