[tool.poetry]
name = "card-maker-api"
version = "0.1.0"
description = ""
authors = ["Jakub <jakub.rutrle@firma.seznam.cz>"]
readme = "README.md"
packages = [{include = "card_maker_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
