[tool.poetry]
name = "card-maker"
version = "0.1.0"
description = ""
authors = ["Jakub <jakub.rutrle@firma.seznam.cz>"]
readme = "README.md"
packages = [{include = "card_maker"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
pillow = "9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
